--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -3,20 +3,26 @@ body {
     font-size: smaller;
     padding: 50px;
     color: #555;
+    background-color: beige;
 }
 
 table {
-    width: 580px;
+    width: 100%;
     padding: 10px;
-    background-color: #c5e7e0;
+    background-color: palevioletred;
 }
 
 th {
-    text-align: left;
+    text-align: center;
     border-bottom: 1px solid;
 }
 
 td {
+    text-align: center;
     padding: 10px;
+}
+
+h1 {
+    text-align: center;
 }
 
